--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>PIN-EVENT</title>
+    <title>PIN-EVENT (@PinEVENT) is a tool for collecting events you love.</title>
 <!-- mostrar sitios para moviles en escala correcta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="all" />
@@ -300,8 +300,13 @@ Estimated delivery: Dec 2013
     
       <p><small><b><a href="#">PIN-EVENT</a></b> now only consists of a telecommunications technical engineer and specialist in digital media creation and over 10 years of experience. To carry out the project will require a team of professionals because of the complexity.</small></div>
 
-          <div class="span5 actions"> <a class="twitter-timeline" href="https://twitter.com/PinEVENT" data-widget-id="372129288432017408">Tweets por @PinEVENT</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
+          <div class="span5 actions"> 
+
+<a class="twitter-timeline" href="https://twitter.com/PinEVENT" data-widget-id="372129288432017408">Tweets by @PinEVENT</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
+</div>
     </div>
 
 
