Meta and twitter

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>PIN-EVENT (@PinEVENT) is a tool for collecting events you love.</title>
-<!-- mostrar sitios para moviles en escala correcta -->
+     <meta name "DC.title" content="PIN-EVENT (@PinEVENT) is a tool for collecting events you love" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="all" />
-    <link type="text/css" rel="stylesheet" href="css/style.css"> 
+    <meta name="description" content="PIN-EVENT is a tool for collecting events you love">
+    <meta name="DC.description" content="PIN-EVENT is a tool for collecting events\
+ you love">
+    <meta name="keywords" content="social, network, event, date, startup">
+    <meta name="DC.subject" content="social, network, event, date, startup">
+    <Link type="text/css" rel="stylesheet" href="css/style.css"> 
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
-    <link type="text/css" rel="stylesheet" href="css/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="css/social-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic">
