--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								                <div class="row-fluid">
 										             <div class="span6 offset3 order">
 
-											                  <a class="coinbase-button" data-code="aea0ed6889e75a8066848e25b3df1739" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/aea0ed6889e75a8066848e25b3df1739">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+			<a class="coinbase-button" data-code="8b11f252b93df9939e1a467a8c2f7d23" data-button-style="custom_large" href="https://coinbase.com/checkouts/8b11f252b93df9939e1a467a8c2f7d23">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>								               
 
        </div>
 											                 </div>
